CORS: filtro com prioridade maxima e headers permitidos amplos
Made-with: Cursor